--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,121 +1,72 @@
-    <div class="picture">
-      <div class="sc-container">
-        <h1>GeeksReads</h1>
-      </div>
+<div class="nav-margin"></div>
+<div class="top-section">
+  <div class="child-section"></div>
+</div>
 
-      <div class="Sign_In">
-        <form>
-            <mat-form-field>
-              <input matInput placeholder="UserName">
-            </mat-form-field>
-            <mat-form-field>
-              <input matInput placeholder="Password">
-            </mat-form-field>
-            <button mat-button>Sign In</button>
-        </form>
-      </div>
-
+<div class="box-container">
+  <div class="header-container">
+    <div class="content">
+      <h4>Deciding what to read next?</h4>
+      <p>
+        You are in the right place. Tell us what titles or genres you have
+        enjoyed in the past and we will give you surprisingly insightful
+        recommendations
+      </p>
     </div>
-      <div class="picture">
-      <div class="header">
-      <h3>Now here? Create your free Account! </h3>
-      </div>
-
-      <div class="Sign_Up">
-        <form>
-          <mat-form-field>
-            <input matInput placeholder="UserName">
-          </mat-form-field>
-          <br>
-          <mat-form-field>
-            <input matInput placeholder="Email">
-          </mat-form-field>
-          <br>
-          <mat-form-field>
-            <input matInput placeholder="Password">
-          </mat-form-field>
-          <br>
-          <button mat-button>Sign Up</button>
-      </form>
-      </div>
-
+    <div class="content">
+      <h4>What are your friends reading?</h4>
+      <p>
+        Chances are your friends are discussing their favourite (and least
+        favourite) books on Geeks Reads
+      </p>
     </div>
-
-      <div class="header2">
-       <h4> What are your friends reading?  </h4>
-       <p>Chances are your friends are discussing</p>
-       <p>their favourite (and least favourite) books on Geeks Reads</p>
+  </div>
+  <div class="books-container round">
+    <h4>What will you discover?</h4>
+    <h6>Because Omar Liked</h6>
+    <div class="books-list">
+      <div class="book" *ngFor="let book of books">
+        <a [routerLink]="['/book', book.url]"><img [src]="book.img"/></a>
       </div>
-
-
-      <div class="header3">
-      <h4> Deciding what to read next? </h4>
-      <p>You are in the right place. Tell us what titles or</p>
-      <p>genres you have enjoyed in the past and we will</p>
-      <p>give you surprisingly insightful</p>
-      <p>recommendations</p>
-      </div>
-
-
-
-      <div class="search">
-      <form>
-      <p> Search and Browse books </p>
-      <mat-form-field class="example-full-width">
-          <input matInput placeholder="Title/Autor...">
-        </mat-form-field>
-      <a href="#"><img class="search-icon" src="http://www.endlessicons.com/wp-content/uploads/2012/12/search-icon.png"></a>
-    </form>
     </div>
-
-
-      <div class="types">
-          <ul>
-              <li><a routerLink="/homepage">Art</a></li>
-              <li><a routerLink="/homepage">Bigraphy</a></li>
-              <li><a routerLink="/homepage">Business</a></li>
-              <li><a routerLink="/homepage">Children's</a></li>
-              <li><a routerLink="/homepage">Christian</a></li>
-              <li><a routerLink="/homepage">Classics</a></li>
-              <li><a routerLink="/homepage">Comics</a></li>
-              <li><a routerLink="/homepage">Cookbooks</a></li>
-            </ul>
-      </div>
-
-      <div class="types1">
-          <li><a routerLink="/homepage">Ebooks</a></li>
-          <li><a routerLink="/homepage">Fantasy</a></li>
-          <li><a routerLink="/homepage">Fiction</a></li>
-          <li><a routerLink="/homepage">Graphic Novels</a></li>
-          <li><a routerLink="/homepage">Historical Fiction</a></li>
-          <li><a routerLink="/homepage">History</a></li>
-          <li><a routerLink="/homepage">Horro</a></li>
-          <li><a routerLink="/homepage">Memoir</a></li>
-        </div>
-
-        <div class="types2">
-            <li><a routerLink="/homepage">Music</a></li>
-            <li><a routerLink="/homepage">Mystery</a></li>
-            <li><a routerLink="/homepage">Non Fiction</a></li>
-            <li><a routerLink="/homepage">Poetry</a></li>
-            <li><a routerLink="/homepage">Psyhology</a></li>
-            <li><a routerLink="/homepage">Romance</a></li>
-            <li><a routerLink="/homepage">Science</a></li>
-            <li><a routerLink="/homepage">Science Fiction</a></li>
-          </div>
-
-        <div class="types3">
-            <li><a routerLink="/homepage">Self Help</a></li>
-            <li><a routerLink="/homepage">Sports</a></li>
-            <li><a routerLink="/homepage">Thriller</a></li>
-            <li><a routerLink="/homepage">Travel</a></li>
-            <li><a routerLink="/homepage">Young Adults</a></li>
-            <li><a routerLink="/homepage">More genres</a></li>
-          </div>
-
-
-
-
-
-
-
+  </div>
+  <!-- <hr> -->
+</div>
+<div class="links-container">
+  <div class="types">
+    <ul>
+      <li><a routerLink="/homepage">Art</a></li>
+      <li><a routerLink="/homepage">Bigraphy</a></li>
+      <li><a routerLink="/homepage">Business</a></li>
+      <li><a routerLink="/homepage">Children's</a></li>
+      <li><a routerLink="/homepage">Christian</a></li>
+      <li><a routerLink="/homepage">Classics</a></li>
+      <li><a routerLink="/homepage">Comics</a></li>
+      <li><a routerLink="/homepage">Cookbooks</a></li>
+    </ul>
+  </div>
+  <div class="types">
+    <ul>
+      <li><a routerLink="/homepage">Ebooks</a></li>
+      <li><a routerLink="/homepage">Fantasy</a></li>
+      <li><a routerLink="/homepage">Fiction</a></li>
+      <li><a routerLink="/homepage">Graphic Novels</a></li>
+      <li><a routerLink="/homepage">Historical Fiction</a></li>
+      <li><a routerLink="/homepage">History</a></li>
+      <li><a routerLink="/homepage">Horror</a></li>
+      <li><a routerLink="/homepage">Memoir</a></li>
+    </ul>
+  </div>
+  <div class="types">
+    <ul>
+      <li><a routerLink="/homepage">Music</a></li>
+      <li><a routerLink="/homepage">Mystery</a></li>
+      <li><a routerLink="/homepage">Non Fiction</a></li>
+      <li><a routerLink="/homepage">Poetry</a></li>
+      <li><a routerLink="/homepage">Psyhology</a></li>
+      <li><a routerLink="/homepage">Romance</a></li>
+      <li><a routerLink="/homepage">Science</a></li>
+      <li><a routerLink="/homepage">Science Fiction</a></li>
+    </ul>
+  </div>
+</div>
