--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -3,6 +3,17 @@ mat-toolbar {
     position: fixed;
     top: 0;
     z-index: 999 !important;
+    display: flex;
+    flex-direction: row;
+}
+
+#hamburger-button {
+    display: none;
+}
+
+.main-links {
+    display: flex;
+    flex-direction: row;
 }
 
 .nav-margin {
@@ -41,6 +52,10 @@ mat-toolbar {
     margin: 0 10px;
 }
 
+#nav-search-bar-side {
+    margin: 0 10px;
+}
+
 #nav-search-bar-icon {
     margin: 0;
 }
@@ -56,6 +71,11 @@ mat-toolbar {
 
 .user-menu a {
     margin: 0 0 5px 0;
+    text-decoration: none;
+}
+
+.user-menu a:hover {
+    text-decoration: underline;
 }
 
 .user-menu {
@@ -64,4 +84,55 @@ mat-toolbar {
 
 .notifications-menu {
     overflow-y: scroll;
+}
+
+.example-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.example-is-mobile .example-toolbar {
+    position: fixed;
+    /* Make sure the toolbar will stay on top of the content as it scrolls past. */
+    z-index: 2;
+}
+
+h1.example-app-name {
+    margin-left: 8px;
+}
+
+.example-sidenav-container {
+    /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
+     causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
+    flex: 1;
+}
+
+.example-is-mobile .example-sidenav-container {
+    /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
+     `<body>` to be our scrolling element for mobile layouts. */
+    flex: 1 0 auto;
+}
+
+@media only screen and (max-width: 831px) {
+    .main-links {
+        display: none;
+    }
+    #hamburger-button {
+        display: block;
+    }
+    #nav-logo {
+        max-width: 100px;
+        max-height: 100px;
+    }
+    #sign-in-link {
+        display: none;
+    }
+    #sign-up-link {
+        display: none;
+    }
 }
