--- a/src/app/author/author.component.css
+++ b/src/app/author/author.component.css
@@ -1,3 +1,7 @@
+img {
+    max-width: 100px;
+}
+
 hr {
     margin: 5px 0;
 }
@@ -73,4 +77,10 @@ hr {
     font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
     font-weight: normal;
     font-size: 16px;
+}
+
+@media only screen and (max-width: 831px) {
+    .nav-bar-margin {
+        height: 5px;
+    }
 }
