--- a/src/app/reviews-comments/reviews-comments.component.html
+++ b/src/app/reviews-comments/reviews-comments.component.html
@@ -65,4 +65,10 @@
   </div>
 </div>
 <hr id="user-underline">
-
+<div id="adding-comment">
+  <img id="user-image-comment" src="https://s.gr-assets.com/assets/nophoto/user/u_30x30-4610a6c9a81aac8aaf70b7ad4388f9a2.png">
+<mat-form-field id="user-input">
+  <textarea [(ngModel)]="str" id="user-input" matInput placeholder="Comment"></textarea>
+</mat-form-field>
+<button (click)="SendComment()" id="comment-send-bt" mat-flat-button>Post</button>
+</div>
