--- a/src/app/book-comment-user/book-comment-user.component.html
+++ b/src/app/book-comment-user/book-comment-user.component.html
@@ -31,7 +31,7 @@
 <hr id="next-review" class="w3-gray">
 <div id="user-reviews">
     <img routerLink="/profile" class="reviewer-image" src="{{reviewerimage[1]}}">
-    <div>
+    <div id="reviewer-data">
         <p id="Reviewer-name">{{reviewername[1]}}
             <span id="rate-it">rated it</span>
             <span class="fa fa-star checked" class="dots"></span>
@@ -62,7 +62,7 @@
 <div id="more_user_reviews">
     <div id="user-reviews">
         <img routerLink="/profile" class="reviewer-image" src="{{reviewerimage[2]}}">
-        <div>
+        <div id="reviewer-data">
             <p id="Reviewer-name">{{reviewername[2]}}
                 <span id="rate-it">rated it</span>
                 <span class="fa fa-star checked" class="dots"></span>
@@ -92,7 +92,7 @@
     <hr id="next-review" class="w3-gray">
     <div id="user-reviews">
         <img routerLink="/profile" class="reviewer-image" src="{{reviewerimage[3]}}">
-        <div>
+        <div id="reviewer-data">
             <p id="Reviewer-name">{{reviewername[3]}}
                 <span id="rate-it">rated it</span>
                 <span class="fa fa-star checked" class="dots"></span>
@@ -122,7 +122,7 @@
     <hr id="next-review" class="w3-gray">
     <div id="user-reviews">
         <img routerLink="/profile" class="reviewer-image" src="{{reviewerimage[4]}}">
-        <div>
+        <div id="reviewer-data">
             <p id="Reviewer-name">{{reviewername[4]}}
                 <span id="rate-it">rated it</span>
                 <span class="fa fa-star checked" class="dots"></span>
@@ -152,7 +152,7 @@
     <hr id="next-review" class="w3-gray">
     <div id="user-reviews">
         <img routerLink="/profile" class="reviewer-image" src="{{reviewerimage[5]}}">
-        <div>
+        <div id="reviewer-data">
             <p id="Reviewer-name">{{reviewername[5]}}
                 <span id="rate-it">rated it</span>
                 <span class="fa fa-star checked" class="dots"></span>
