added id in profile

--- a/src/app/profile-entity/profile-entity.component.html
+++ b/src/app/profile-entity/profile-entity.component.html
@@ -5,7 +5,7 @@
 -->
 <div>
     <img width="80" height="80" [src]="userCoverPhoto">
-    <h3>{{userName}}</h3>
+    <h3 id="user-name">{{userName}}</h3>
     <button routerLink="/profile-edit">Edit Profile</button>
 </div>
 <h1> My Books : </h1>
