--- a/src/app/book-comment-user/book-comment-user.component.html
+++ b/src/app/book-comment-user/book-comment-user.component.html
@@ -2,14 +2,15 @@
 <div id="user-reviews">
     <img routerLink="/profile" class="reviewer-image" src="{{reviewerimage[0]}}">
     <div id="reviewer-data">
-        <p id="Reviewer-name">{{reviewername[0]}}
+    <div id="name-div">
+        <p id="Reviewer-name">{{reviewername[0]}}</p>
             <span id="rate-it">rated it</span>
             <span class="fa fa-star checked" class="dots"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star"></span>
             <span class="fa fa-star"></span>
-        </p>
+    </div>
         <p id="review-date">{{reviewerdate[0]}}</p>
     </div>
 </div>
@@ -32,14 +33,15 @@
 <div id="user-reviews">
     <img routerLink="/profile" class="reviewer-image" src="{{reviewerimage[1]}}">
     <div id="reviewer-data">
-        <p id="Reviewer-name">{{reviewername[1]}}
+    <div id="name-div">
+        <p id="Reviewer-name">{{reviewername[1]}}</p>
             <span id="rate-it">rated it</span>
             <span class="fa fa-star checked" class="dots"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
             <span class="fa fa-star"></span>
-        </p>
+            <span class="fa fa-star"></span>
+    </div>
         <p id="review-date">{{reviewerdate[1]}}</p>
     </div>
 </div>
@@ -63,14 +65,15 @@
     <div id="user-reviews">
         <img routerLink="/profile" class="reviewer-image" src="{{reviewerimage[2]}}">
         <div id="reviewer-data">
-            <p id="Reviewer-name">{{reviewername[2]}}
-                <span id="rate-it">rated it</span>
-                <span class="fa fa-star checked" class="dots"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-            </p>
+        <div id="name-div">
+        <p id="Reviewer-name">{{reviewername[2]}}</p>
+            <span id="rate-it">rated it</span>
+            <span class="fa fa-star checked" class="dots"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span>
+    </div>
             <p id="review-date">{{reviewerdate[2]}}</p>
         </div>
     </div>
@@ -93,14 +96,15 @@
     <div id="user-reviews">
         <img routerLink="/profile" class="reviewer-image" src="{{reviewerimage[3]}}">
         <div id="reviewer-data">
-            <p id="Reviewer-name">{{reviewername[3]}}
-                <span id="rate-it">rated it</span>
-                <span class="fa fa-star checked" class="dots"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-            </p>
+            <div id="name-div">
+        <p id="Reviewer-name">{{reviewername[3]}}</p>
+            <span id="rate-it">rated it</span>
+            <span class="fa fa-star checked" class="dots"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span>
+    </div>
             <p id="review-date">{{reviewerdate[3]}}</p>
         </div>
     </div>
@@ -123,14 +127,15 @@
     <div id="user-reviews">
         <img routerLink="/profile" class="reviewer-image" src="{{reviewerimage[4]}}">
         <div id="reviewer-data">
-            <p id="Reviewer-name">{{reviewername[4]}}
-                <span id="rate-it">rated it</span>
-                <span class="fa fa-star checked" class="dots"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-            </p>
+            <div id="name-div">
+        <p id="Reviewer-name">{{reviewername[4]}}</p>
+            <span id="rate-it">rated it</span>
+            <span class="fa fa-star checked" class="dots"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span>
+    </div>
             <p id="review-date">{{reviewerdate[4]}}</p>
         </div>
     </div>
@@ -153,14 +158,15 @@
     <div id="user-reviews">
         <img routerLink="/profile" class="reviewer-image" src="{{reviewerimage[5]}}">
         <div id="reviewer-data">
-            <p id="Reviewer-name">{{reviewername[5]}}
-                <span id="rate-it">rated it</span>
-                <span class="fa fa-star checked" class="dots"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-            </p>
+            <div id="name-div">
+        <p id="Reviewer-name">{{reviewername[5]}}</p>
+            <span id="rate-it">rated it</span>
+            <span class="fa fa-star checked" class="dots"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span>
+    </div>
             <p id="review-date">{{reviewerdate[5]}}</p>
         </div>
     </div>
