added page comment id

--- a/src/app/reviews-entity/reviews-entity.component.html
+++ b/src/app/reviews-entity/reviews-entity.component.html
@@ -31,6 +31,6 @@
   <p type="text" class="dots" id="show-likes">{{reviewerlikes[0]}}</p>
   <p class="dots">.</p>
   <i class="comment"><mat-icon> mode_comment</mat-icon></i>
-  <p class="dots">{{reviewercomments[0]}}</p>
+  <p class="dots" id="show-comments">{{reviewercomments[0]}}</p>
 </div>
 <hr id="next-review" class="w3-gray">
